--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -4,22 +4,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/navigation_bar_title">
 
-    <PreferenceScreen
-        android:fragment="com.android.settings.rascarlo.NavBar"
-        android:key="navigation_bar_buttons_layout"
-        android:title="@string/navigation_bar_buttons_layout_title" />
+        <PreferenceScreen
+            android:fragment="com.android.settings.rascarlo.NavBar"
+            android:key="navigation_bar_buttons_layout"
+            android:title="@string/navigation_bar_buttons_layout_title" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="navbar_button_tint"
-        android:title="@string/navbar_button_tint_title"
-        android:defaultValue="#ffffff" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="navbar_button_tint"
+            android:title="@string/navbar_button_tint_title"
+            android:defaultValue="#ffffff" />
     
-    <ListPreference
-        android:key="navigation_bar_height"
-        android:dialogTitle="@string/navigation_bar_height"
-        android:title="@string/navigation_bar_height"
-        android:entries="@array/navigation_bar_height_entries"
-        android:entryValues="@array/navigation_bar_height_values"
-        android:defaultValue="48"
-        android:persistent="false" />
+        <ListPreference
+            android:key="navigation_bar_height"
+            android:dialogTitle="@string/navigation_bar_height"
+            android:title="@string/navigation_bar_height"
+            android:entries="@array/navigation_bar_height_entries"
+            android:entryValues="@array/navigation_bar_height_values"
+            android:defaultValue="48"
+            android:persistent="false" />
+
+        <PreferenceScreen
+            android:fragment="com.android.settings.rascarlo.NavBarLongPressActions"
+            android:key="navbar_custom_actions"
+            android:title="@string/navbar_long_press_title" />
 </PreferenceScreen>
